<?xml version="1.0" encoding="utf-8"?>

  <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      >

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_location"
        android:layout_marginBottom="@dimen/alert_dialog_margin_bottom"
        android:gravity="center"
        android:textColor="@color/colorPrimary"
        />

    <include layout="@layout/alert_dialog_divider"/>

  <androidx.appcompat.widget.AppCompatTextView
      android:id="@+id/current_location"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/current_location"
      android:gravity="center"
      style="@style/AlertDialogText"
      />

  <include layout="@layout/alert_dialog_divider"/>

  <androidx.appcompat.widget.AppCompatTextView
      android:id="@+id/enter_location"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/enter_location"
      android:gravity="center"
      style="@style/AlertDialogText"

      />

  <include layout="@layout/alert_dialog_divider"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/remove_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/remove_location"
        android:textColor="@color/red"
        android:visibility="invisible"
        android:layout_marginTop="@dimen/alert_dialog_margin_top"
        android:layout_marginBottom="@dimen/alert_dialog_margin_bottom"
        android:gravity="center"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/colorPrimary"
        android:text="@string/cancel"
        />

  </androidx.appcompat.widget.LinearLayoutCompat>
